Remove checking for active rustup toolchain version

--- a/tasks/set-toolchain.yml
+++ b/tasks/set-toolchain.yml
@@ -1,15 +1,15 @@
 ---
-- name: Set default toolchain version
-  ansible.builtin.command:
-    argv:
-      - rustup
-      - default
-      - "{{ rustup_default_version }}"
-  environment:
-    RUSTUP_HOME: "{{ rustup_user_home }}/{{ rustup_home_suffix }}"
-    CARGO_HOME: "{{ rustup_user_home }}/{{ rustup_cargo_home_suffix }}"
-    PATH: "{{ ansible_env.PATH }}:{{ rustup_user_home }}/{{ rustup_cargo_home_suffix }}/bin"
-  when: active_rustup_toolchain_version is undefined or active_rustup_toolchain_version != rustup_default_version
+# - name: Set default toolchain version
+#   ansible.builtin.command:
+#     argv:
+#       - rustup
+#       - default
+#       - "{{ rustup_default_version }}"
+#   environment:
+#     RUSTUP_HOME: "{{ rustup_user_home }}/{{ rustup_home_suffix }}"
+#     CARGO_HOME: "{{ rustup_user_home }}/{{ rustup_cargo_home_suffix }}"
+#     PATH: "{{ ansible_env.PATH }}:{{ rustup_user_home }}/{{ rustup_cargo_home_suffix }}/bin"
+#   when: active_rustup_toolchain_version is undefined or active_rustup_toolchain_version != rustup_default_version
 
 - name: Install cargo crates
   ansible.builtin.shell: |
