--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,11 +30,11 @@
     # Set the path to the rustup
     - name: Download rustup
       ansible.builtin.import_tasks: get-rustup.yml
-      when: rustup_exe_status is failed
+      # when: rustup_exe_status is failed
 
-    - name: Set specified toolchain version as default, implicitly installing if necessary
-      ansible.builtin.import_tasks: set-toolchain.yml
-      when: rustup_exe is undefined or active_rustup_toolchain_version != rustup_default_version
+    # - name: Set specified toolchain version as default, implicitly installing if necessary
+    #   ansible.builtin.import_tasks: set-toolchain.yml
+    #   when: rustup_exe is undefined or active_rustup_toolchain_version != rustup_default_version
 
     - name: Apply configuration (shellrc, etc.)
       ansible.builtin.import_tasks: configure.yml
